added slide/carousel in the hero area ...

--- a/blog-details.html
+++ b/blog-details.html
@@ -467,7 +467,8 @@
     </div>
 
 
-    <script data-cfasync="false" src="https://bestwpware.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script data-cfasync="false" src="https://bestwpware.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
     
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/isotope.pkgd.min.js"></script>
@@ -480,6 +481,4 @@
     <script src="assets/js/main.js"></script>
 </body>
 
-
-<!-- Mirrored from bestwpware.com/html/tf/eduac-demo/demo/blog-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Oct 2023 15:49:06 GMT -->
 </html>
