--- a/index.html
+++ b/index.html
@@ -88,27 +88,115 @@
         <!-- ~~~ Mobile Menu ~~~ -->
 
 
-        <!-- ~~~ Banner Section ~~~ -->
-        <section class="banner-section banner-overlay bg_img" data-img="assets/images/banner/banner-bg.jpg">
-            <div class="container">
-                <div class="banner-content cl-white">
-                    <h3 class="subtitle">Looking to Explore</h3>
-                    <h1 class="title">Your Knowledge</h1>
-                    <p>Donec quis fermentum metus. Fusce nec eleifend urna. Sed id placerat erat. Aenean congue, metus sit amet sagittis tincidunt, augue odio vulputate meg ipsum dolor sit amet, consectetur ad.</p>
-                    <div class="banner-button-area">
-                        <a href="about.html" class="custom-button btn-md">Learn More<i class="flaticon-tap-1"></i></a>
-                        <a href="#apply" class="custom-button btn-md theme-one bg-white">Apply now<i class="flaticon-tap-1"></i></a>
-                    </div>
+        <!-- slide / banner section -->
+        <div class="container-fluid m-0 p-0">
+            <div class="carousel">
+                <div class="slider2">
+                    <section>
+                        <div class="slider-wrapper banner-overlay lighter">
+                            <div class="slider">
+                                <img id="slide-1" src="assets/images/banner/banner-bg.jpg" alt="slide 1">
+                            </div>
+                            <div class="banner-content cl-white banner-writeup">
+                                <h3 class="subtitle">Looking to Explore</h3>
+                                <h1 class="title">Your Knowledge</h1>
+                                <p>Donec quis fermentum metus. Fusce nec eleifend urna. Sed id placerat erat. Aenean congue, metus sit amet sagittis tincidunt, augue odio vulputate meg ipsum dolor sit amet, consectetur ad.</p>
+                                <div class="banner-button-area">
+                                    <a href="about.html" class="custom-button btn-md">Learn More<i class="flaticon-tap-1"></i></a>
+                                    <a href="#apply" class="custom-button btn-md theme-one bg-white">Apply now<i class="flaticon-tap-1"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="slider-wrapper banner-overlay lighter">
+                            <div class="slider">
+                                <img id="slide-1" src="assets/images/banner/06.png" alt="slide 2">
+                            </div>
+                            <div class="banner-content cl-white banner-writeup">
+                                <h3 class="subtitle">Looking to Explore</h3>
+                                <h1 class="title">Your Knowledge</h1>
+                                <p>Donec quis fermentum metus. Fusce nec eleifend urna. Sed id placerat erat. Aenean congue, metus sit amet sagittis tincidunt, augue odio vulputate meg ipsum dolor sit amet, consectetur ad.</p>
+                                <div class="banner-button-area">
+                                    <a href="about.html" class="custom-button btn-md">Learn More<i class="flaticon-tap-1"></i></a>
+                                    <a href="#apply" class="custom-button btn-md theme-one bg-white">Apply now<i class="flaticon-tap-1"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="slider-wrapper banner-overlay lighter">
+                            <div class="slider">
+                                <img id="slide-1" src="assets/images/banner/07.png" alt="slide 3">
+                            </div>
+                            <div class="banner-content cl-white banner-writeup">
+                                <h3 class="subtitle">Looking to Explore</h3>
+                                <h1 class="title">Your Knowledge</h1>
+                                <p>Donec quis fermentum metus. Fusce nec eleifend urna. Sed id placerat erat. Aenean congue, metus sit amet sagittis tincidunt, augue odio vulputate meg ipsum dolor sit amet, consectetur ad.</p>
+                                <div class="banner-button-area">
+                                    <a href="about.html" class="custom-button btn-md">Learn More<i class="flaticon-tap-1"></i></a>
+                                    <a href="#apply" class="custom-button btn-md theme-one bg-white">Apply now<i class="flaticon-tap-1"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="slider-wrapper banner-overlay lighter">
+                            <div class="slider">
+                                <img id="slide-1" src="assets/images/banner/12.png" alt="slide 4">
+                            </div>
+                            <div class="banner-content cl-white banner-writeup">
+                                <h3 class="subtitle">Looking to Explore</h3>
+                                <h1 class="title">Your Knowledge</h1>
+                                <p>Donec quis fermentum metus. Fusce nec eleifend urna. Sed id placerat erat. Aenean congue, metus sit amet sagittis tincidunt, augue odio vulputate meg ipsum dolor sit amet, consectetur ad.</p>
+                                <div class="banner-button-area">
+                                    <a href="about.html" class="custom-button btn-md">Learn More<i class="flaticon-tap-1"></i></a>
+                                    <a href="#apply" class="custom-button btn-md theme-one bg-white">Apply now<i class="flaticon-tap-1"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="slider-wrapper banner-overlay lighter">
+                            <div class="slider">
+                                <img id="slide-1" src="assets/images/banner/lg-1.png" alt="slide 5">
+                            </div>
+                            <div class="banner-content cl-white banner-writeup">
+                                <h3 class="subtitle">Looking to Explore</h3>
+                                <h1 class="title">Your Knowledge</h1>
+                                <p>Donec quis fermentum metus. Fusce nec eleifend urna. Sed id placerat erat. Aenean congue, metus sit amet sagittis tincidunt, augue odio vulputate meg ipsum dolor sit amet, consectetur ad.</p>
+                                <div class="banner-button-area">
+                                    <a href="about.html" class="custom-button btn-md">Learn More<i class="flaticon-tap-1"></i></a>
+                                    <a href="#apply" class="custom-button btn-md theme-one bg-white">Apply now<i class="flaticon-tap-1"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <div class="banner-thumb">
+                    <div class="rounded-shape shape-1"></div>
+                    <div class="rounded-shape shape-2"></div>
+                    <div class="rounded-shape shape-3"></div>
+                    <!-- <img src="assets/images/banner/banner.png" alt="banner"> -->
+                </div>
+                <div class="controls">
+                    <span class="arrow left">
+                        <span class="material-icons">chevron_left</span>
+                    </span>
+                    <span class="arrow right">
+                        <span class="material-icons">chevron_right</span>
+                    </span>
+                    <ul id="ul">
+                        <li class="selected"></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
                 </div>
             </div>
-            <div class="banner-thumb">
-                <div class="rounded-shape shape-1"></div>
-                <div class="rounded-shape shape-2"></div>
-                <div class="rounded-shape shape-3"></div>
-                <img src="assets/images/banner/banner.png" alt="banner">
-            </div>
-        </section>
-        <!-- ~~~ Banner Section ~~~ -->
+        </div>
+        <!-- end slide / banner section -->
 
 
         <!-- ~~~ Tutor Section ~~~ -->
@@ -259,6 +347,69 @@
             </div>
         </section> -->
         <!-- ~~~ Banner Section ~~~ -->
+
+        
+        <!-- ~~~ Gallery Section ~~~ -->
+        <section class="gallery-section pt-120 pb-120">
+            <div class="container">
+                <div class="d-flex flex-wrap align-items-center mb-5 mb-sm-5">
+                    <div class="gallery-header-left">
+                        <h2 class="title">Let's See Our <span class="cl-theme fw-400">Activites</span></h2>
+                    </div>
+                    <div class="gallery-header-right">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum leo leo, porta eget ex pretium, porta venenatis diam. Etiam fringilla nibh in eleifend viverra. Integer dignissim placerat ornare. Pellentesque porttitor.</p>
+                    </div>
+                </div>
+                <div class="m--15">
+                    <div class="grid-area">
+                        <div class="grid-item item--lg">
+                            <div class="gallery-img">
+                                <div class="cont">
+                                    <a href="assets/images/gallery/lg-1.png" class="magnific_img_popup">
+                                        <i class="flaticon-add"></i>
+                                    </a>
+                                </div>
+                                <img src="assets/images/gallery/01.png" alt="gallery">
+                            </div>
+                        </div>
+                        <div class="grid-item item--lg">
+                            <div class="gallery-img">
+                                <div class="cont">
+                                    <a href="assets/images/gallery/lg-6.png" class="magnific_img_popup">
+                                        <i class="flaticon-add"></i>
+                                    </a>
+                                </div>
+                                <img src="assets/images/gallery/06.png" alt="gallery">
+                            </div>
+                        </div>
+                        <div class="grid-item item--lg">
+                            <div class="gallery-img">
+                                <div class="cont">
+                                    <a href="assets/images/gallery/lg-7.png" class="magnific_img_popup">
+                                        <i class="flaticon-add"></i>
+                                    </a>
+                                </div>
+                                <img src="assets/images/gallery/07.png" alt="gallery">
+                            </div>
+                        </div>
+                        <div class="grid-item item--lg">
+                            <div class="gallery-img">
+                                <div class="cont">
+                                    <a href="assets/images/gallery/lg-12.png" class="magnific_img_popup">
+                                        <i class="flaticon-add"></i>
+                                    </a>
+                                </div>
+                                <img src="assets/images/gallery/12.png" alt="gallery">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center load-more mt-5">
+                    <a href="gallery.html" class="custom-button theme-one">See More <i class="fas fa-angle-right"></i></a>
+                </div>
+            </div>
+        </section>
+        <!-- ~~~ Gallery Section ~~~ -->
 
 
         <!-- ~~~ Course Section ~~~ -->
