--- a/management.html
+++ b/management.html
@@ -176,6 +176,64 @@
         <!-- ~~~ Course Section ~~~ -->
 
 
+        <!-- ~~~ Popular Courses 2 ~~~ -->
+        <section class="course-section pt-120 pb-120 pos-rel">
+            <div class="bg-shape-1 bg_img right_top d-none d-lg-block" data-img="assets/images/shapes/shape-2.png"></div>
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="title">Our <span>Management Team</span></h2>
+                </div>
+                <div class="course-wrapper row justify-content-between mb-40-60-none">
+                    <div class="course-item-2">
+                        <div class="course-inner">
+                            <div class="course-thumb">
+                                <img src="assets/images/course/07.png" alt="course">
+                            </div>
+                            <div class="course-content">
+                                <h5 class="title"><a href="course-details.html">Mr Fredrich Ukama</a></h5>
+                                <span class="info cl-theme">Manager / Principal</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course-item-2">
+                        <div class="course-inner">
+                            <div class="course-thumb">
+                                <img src="assets/images/course/08.png" alt="course">
+                            </div>
+                            <div class="course-content">
+                                <h5 class="title"><a href="course-details.html">Mrs Vera Okeke</a></h5>
+                                <span class="info cl-theme">Vice Principal</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course-item-2">
+                        <div class="course-inner">
+                            <div class="course-thumb">
+                                <img src="assets/images/course/09.png" alt="course">
+                            </div>
+                            <div class="course-content">
+                                <h5 class="title"><a href="course-details.html">Mr Fredrich Ukama</a></h5>
+                                <span class="info cl-theme">Bursar</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="course-item-2">
+                        <div class="course-inner">
+                            <div class="course-thumb">
+                                <img src="assets/images/course/10.png" alt="course">
+                            </div>
+                            <div class="course-content">
+                                <h5 class="title"><a href="course-details.html">Mr Fredrich Ukama</a></h5>
+                                <span class="info cl-theme">Dean of Students Affairs</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- ~~~ Popular Courses 2 ~~~ -->
+
+
         <!-- ~~~ Footer Section ~~~ -->
         <footer class="bg_img" data-img="assets/images/footer/footer-bg.jpg">
             <div class="footer-section oh pos-rel">
@@ -276,7 +334,8 @@
     </div>
 
 
-    <script data-cfasync="false" src="https://bestwpware.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script data-cfasync="false" src="https://bestwpware.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
     
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/isotope.pkgd.min.js"></script>
@@ -289,6 +348,4 @@
     <script src="assets/js/main.js"></script>
 </body>
 
-
-<!-- Mirrored from bestwpware.com/html/tf/eduac-demo/demo/instructor.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Oct 2023 15:48:29 GMT -->
 </html>
