--- a/admissions.html
+++ b/admissions.html
@@ -293,7 +293,8 @@
     </div>
 
 
-    <script data-cfasync="false" src="https://bestwpware.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script data-cfasync="false" src="https://bestwpware.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
     
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/isotope.pkgd.min.js"></script>
@@ -306,6 +307,4 @@
     <script src="assets/js/main.js"></script>
 </body>
 
-
-<!-- Mirrored from bestwpware.com/html/tf/eduac-demo/demo/instructor.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Oct 2023 15:48:29 GMT -->
 </html>
