--- a/contact.html
+++ b/contact.html
@@ -273,7 +273,8 @@
     </div>
 
 
-    <script data-cfasync="false" src="https://bestwpware.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="assets/js/jquery-3.6.0.min.js"></script>
+    <script data-cfasync="false" src="https://bestwpware.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
     
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/isotope.pkgd.min.js"></script>
@@ -283,12 +284,7 @@
     <script src="assets/js/viewport.jquery.js"></script>
     <script src="assets/js/nice-select.js"></script>
     <script src="assets/js/owl.min.js"></script>
-    <script src="https://maps.google.com/maps/api/js?key=AIzaSyCo_pcAdFNbTDCAvMwAD19oRTuEmb9M50c"></script>
-    <script src="assets/js/map.js"></script>
-    <script src="assets/js/contact.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
-
-<!-- Mirrored from bestwpware.com/html/tf/eduac-demo/demo/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 11 Oct 2023 15:49:08 GMT -->
 </html>
