fixed the map in the contact page

--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,9 @@
 
 
         <!-- ~~~ Maps Section ~~~ -->
-        <div class="maps"></div>
+        <div class="maps">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.352050699781!2d7.058303475052101!3d6.217219326646647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104383a78aac3447%3A0x9153cc693ebf167d!2sZARA%20STORES!5e0!3m2!1sen!2sng!4v1698067735769!5m2!1sen!2sng" width="1500" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
         <!-- ~~~ Maps Section ~~~ -->
 
 
